--- a/legal.html
+++ b/legal.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous">
 </head>
 <body class="container-lg">
+  <!-- banner -->
     <section>
         <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
             <div class="container-fluid ms-3">
@@ -80,14 +81,14 @@
           </div>
     </section>
 
-
+<!-- actiions -->
     <section>
-      <h1 class="text-center mt-5">The Legal Practice Area</h1>
+      <h3 class="text-center mt-5">The Legal Practice Area</h3>
       <p class="text-center"> There are many variations of passages of Lorem Ipsum available, but the majority have <br>
         suffered alteration in some form, by injected humour </p>
       <div class="container-fluid text-center">
         <div class="row ">
-          <div class="col">
+          <div class="col-lg-4 col-12">
             <img src="images/divorce.png" alt="">
             <h5 class="pt-3">Business Law</h5>
             <p>There are many variations of <br>
@@ -97,7 +98,7 @@
               form, by injected humour</p>
               <img src="images/Frame.png" alt="">
           </div>
-          <div class="col">
+          <div class="col-lg-4 col-12">
             <img src="images/child.png" alt="">
             <h5 class="pt-3">Child Law</h5>
             <p>There are many variations of <br>
@@ -107,7 +108,7 @@
               form, by injected humour</p>
               <img src="images/Frame.png" alt="">
           </div>
-          <div class="col">
+          <div class="col-lg-4 col-12">
             <img src="images/divorce.png" alt="">
             <h5 class="pt-3">Divorce Law</h5>
             <p>There are many variations of <br>
@@ -120,7 +121,168 @@
         </div>
       </div>
     </section>
+<!-- client review -->
+    <section>
+      <h3 class="text-center mt-5">What Our Client Says</h3>
+      <p class="text-center"> 
+        There are many variations of passages of Lorem Ipsum available, but the majority have<br>
+        suffered alteration in some form, by injected humour</p>
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/slider-1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <img src="..." alt="">
+                <h3>Awald Hossain</h3>
+                <h5>UlX Designer</h5>
+                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
+                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <img src="images/slider-2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block  ">
+                <img src="..." alt="">
+                <h3>Awald Hossain</h3>
+                <h5>UlX Designer</h5>
+                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
+                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <img src="..." alt="">
+                <h3>Awald Hossain</h3>
+                <h5>UlX Designer</h5>
+                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
+                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
+                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+    </section>
+<!-- client review -->
+ <section>
+  <h3 class="text-center mt-5">Frequently Asked Any Questions</h3>
+      <p class="text-center"> 
+        There are many variations of passages of Lorem Ipsum available, but the majority have<br>
+        suffered alteration in some form, by injected humour</p>
+        <div class="container-fluid d-flex">
+          <div class="row p-5">
+            <div class="col-lg-6 col-12">
+        <div class="accordion" id="accordionPanelsStayOpenExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                Accordion Item #1
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+              <div class="accordion-body">
+                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                Accordion Item #2
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                Accordion Item #3
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                Accordion Item #3
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-12">
+        <img class="img-fluid" src="images/faq.png" alt="">
+      </div>
+      </div>
+        </div>
+ </section>
+
+ <footer class="p-3 mb-2 bg-black text-white">
+  <div class="container text-start p-5">
+    <div class="row">
+      <div class="col ">
+       <img  class="img-fluid pb-5" src="images/logo.png" alt="">
+<p>There are many variations of <br>
+passages of Lorem Ipsum <br>
+available, but the majority have <br> 
+suffered alteration in some <br>
+form, by injected humour
+</p>
+      </div>
+      <div class="col">
+        <h3 class="pb-5">Usefull Link</h3>
+<p> Homes <br> <br>About Us <br><br>Cases <br><br>Blog <br><br>Contact Us 
+</p>
+      </div>
+      <div class="col">
+       <h3 class="pb-5"> Contact Now</h3>
+<p>555 4th 5t NW, Washington <br>
+DC 20530, United States <br> <br>
++88 01750 000 000 <br>
++88 01750 000 000 <br> <br>
+info@gmail.com <br>
+info@gmail.com</p>
+      </div>
+      <div class="col">
+        <h3 class="pb-5">Subscribe
+         </h3>
+         <p class="pb-2"> Subscribe for our latest & <br>
+          Articles. We Won t Give You <br>
+          Spam Mail</p>
+          <input class="" type="email" placeholder="        Email Address" aria-label="email">
+      </div>
+    </div>
+  </div>
+ </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
