--- a/legal.html
+++ b/legal.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous">
 </head>
 <body class="container-lg">
-  <!-- banner -->
-    <section>
+  <!-- header -->
+    <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
             <div class="container-fluid ms-3">
                 <a class="navbar-brand" href="#">
@@ -42,7 +42,7 @@
                     <a class="nav-link disabled" aria-disabled="true">Contact</a>
                   </li>
                 </ul>
-                    <button type="button" class=" btn btn-secondary btn-sm " 
+                    <button type="button" class=" switch" 
                     data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Consultation
                       </button>
@@ -51,11 +51,11 @@
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                              <h1 class="modal-title fs-5" id="exampleModalLabel">Case description</h1>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                              ...
+                              <input type="text" placeholder=" Describe your problem">
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -71,52 +71,49 @@
           <div class=" text-white banner ">
             <h1>We Provide Effective <br> Legal Solutions
              </h1>
-             <p class="fs-5 pt-2 mx-5">There are many variations of passages of Lorem Ipsum available, but the majority <br>
-              have suffered alteration in some form, by injected humour</p>
+             <p class="fs-5 pt-2 mx-5">At Effective Legal Solutions we pride ourselves on always giving you
+               the legal advice you really need,delivered by expert lawyers.</p>
               <form class="d-flex mx-5" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class=" switch" type="submit">Search</button>
               </form>
 
           </div>
-    </section>
+    </header>
 
 <!-- actiions -->
     <section>
       <h3 class="text-center mt-5">The Legal Practice Area</h3>
-      <p class="text-center"> There are many variations of passages of Lorem Ipsum available, but the majority have <br>
-        suffered alteration in some form, by injected humour </p>
-      <div class="container-fluid text-center">
-        <div class="row ">
-          <div class="col-lg-4 col-12">
-            <img src="images/divorce.png" alt="">
+      <p class="text-center mb-5"> TA practice area is the area of law in which an attorney primarily focuses their career. <br>
+         For example, employment law, corporate law, or criminal law are each practice areas.
+        </p>
+      <div class="container-fluid text-center p-3">
+        <div class="row  ">
+          <div class=" card col-lg-4 col-12">
+            <img src="images/business.png" style="width: 100px;" class="center">
             <h5 class="pt-3">Business Law</h5>
-            <p>There are many variations of <br>
-              passages of Lorem Ipsum <br>
-              available, but the majority have <br>
-              suffered alteration in some <br>
-              form, by injected humour</p>
-              <img src="images/Frame.png" alt="">
+            <p>Business law is a body of rules, regulations,
+               and principles that governs the activities of a business. 
+              It includes concepts such as 
+              the legal ways in which directors can be held accountable for their actions,
+               and what constitutes a breach of a contract.</p>
+              <img src="images/Frame.png"style="width: 50px;" class="center">
           </div>
-          <div class="col-lg-4 col-12">
-            <img src="images/child.png" alt="">
+          <div class=" card col-lg-4 col-12">
+            <img src="images/child.png" style="width: 100px;"class="center">
             <h5 class="pt-3">Child Law</h5>
-            <p>There are many variations of <br>
-              passages of Lorem Ipsum <br>
-              available, but the majority have <br>
-              suffered alteration in some <br>
-              form, by injected humour</p>
-              <img src="images/Frame.png" alt="">
+            <p>Child's Law, also known as the Langmuir Law or the Childs-Langmuir 
+              Law or equation, is a formula that relates the current density of a flowing space charge to
+              the anode voltage in a vacuum diode.</p>
+              <img src="images/Frame.png" style="width: 50px; "class="center">
           </div>
-          <div class="col-lg-4 col-12">
-            <img src="images/divorce.png" alt="">
+          <div class=" card card-body col-lg-4 col-12">
+            <img src="images/divorce.png" style="width: 100px;" class="center">
             <h5 class="pt-3">Divorce Law</h5>
-            <p>There are many variations of <br>
-              passages of Lorem Ipsum <br>
-              available, but the majority have <br>
-              suffereD alteration in some <br>
-              form, by injected humour</p>
-              <img src="images/Frame.png" alt="">
+            <p>The divorce gets effective in 90 days of the said divorce notice if the couple does not reconcile in between. 
+              It should be noted that as per 
+              Bangladesh's regulations the notice of divorce must be delivered to the local chairman as well.</p>
+              <img src="images/Frame.png" style="width: 50px;" class="center">
           </div>
         </div>
       </div>
@@ -125,8 +122,8 @@
     <section>
       <h3 class="text-center mt-5">What Our Client Says</h3>
       <p class="text-center"> 
-        There are many variations of passages of Lorem Ipsum available, but the majority have<br>
-        suffered alteration in some form, by injected humour</p>
+        We’re honored that our clients appreciate the dedication and empathy we bring to each and every case. 
+       we’ve helped previous clients move forward into the next chapter of their lives. </p>
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -137,34 +134,34 @@
             <div class="carousel-item active">
               <img src="images/slider-1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <img src="..." alt="">
-                <h3>Awald Hossain</h3>
-                <h5>UlX Designer</h5>
-                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
-                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
-                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                <img src="images/f1.jpg" class="icon" alt="">
+                <h3>Adrita Hossain</h3>
+                <h5>Housewife</h5>
+                <p class="pb-5">In my divorce, I needed trust and consistency. 
+                  Jennifer Hargrave not only provided me with everything she set out to accomplish, 
+                  she became a true advocate and lead me through the ever-changing landscape of a divorce with confidence, poise, integrity and kindness. 
+                  Jennifer Hargrave was the absolute best decision I made when selecting my legal team!</p>
               </div>
             </div>
             <div class="carousel-item ">
               <img src="images/slider-2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block  ">
-                <img src="..." alt="">
-                <h3>Awald Hossain</h3>
-                <h5>UlX Designer</h5>
-                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
-                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
-                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                <img src="images/f2.jpg" class="icon" alt="">
+                <h3>Rial Muntasin</h3>
+                <h5>Buisnessman</h5>
+                <p class="pb-5">For instance, consider this review for an auto shop: 
+                  “The comprehensive services offered by this auto shop were impressive. 
+                  I appreciate their extended working hours, which are highly convenient for busy individuals.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <img src="..." alt="">
-                <h3>Awald Hossain</h3>
+                <img src="images/f3.jpg" class="icon" alt="">
+                <h3>Hossain Biva</h3>
                 <h5>UlX Designer</h5>
-                <p class="pb-5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
-                  literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney 
-                  College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                <p class="pb-5">Jennifer and Skye really fought for me!!! They were kind, wise, and ethical.
+                  They know how to deal with underhanded people. And we won!!! Strongly recommend!</p>
               </div>
             </div>
           </div>
@@ -178,62 +175,74 @@
           </button>
         </div>
     </section>
-<!-- client review -->
+<!-- faq -->
  <section>
   <h3 class="text-center mt-5">Frequently Asked Any Questions</h3>
       <p class="text-center"> 
-        There are many variations of passages of Lorem Ipsum available, but the majority have<br>
-        suffered alteration in some form, by injected humour</p>
+        A frequently asked questions (FAQ) list is often used in articles, websites, email lists, <br>
+        and online forums where common questions tend to recur.
+       </p>
         <div class="container-fluid d-flex">
           <div class="row p-5">
             <div class="col-lg-6 col-12">
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                Accordion Item #1
+              <button class="accordion-button mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+              aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                1. Differences between Flexbox and Grid.
               </button>
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong> Grid:</strong>CSS Grid Layout, is a two-dimensional grid-based layout system with rows and columns.
+                To get started you have to define a container element as a grid with display: grid;<br>
+                <strong>Flexbox:</strong>The CSS Flexbox offers a one-dimensional layout. 
+                To get started you have to define a container element as a grid with display: flex;
+
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                Accordion Item #2
+                2. What is the purpose of media query?
               </button>
             </h2>
             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Media queries </strong> are a key part of responsive web design,
+                 as they allow you to create different layouts depending on the size of the viewport,
+                 but they can also be used to detect other things about the environment your site is running on,
+                  for example whether the user is using a touchscreen rather than a mouse.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                Accordion Item #3
+                3. What is css box model and how it works?
               </button>
             </h2>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>The CSS box model</strong> is a container that contains multiple properties including 
+                  borders, margin, padding, and the content itself. 
+                  It is used to create the design and layout of web pages. 
               </div>
             </div>
           </div>
 
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                Accordion Item #3
+              <button class="accordion-button collapsed mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                4. what is symmetric tag with example?
               </button>
             </h2>
-            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Semantic HTML tags</strong> tags that define the meaning of the content they contain. 
+                  For example, tags like header article and footer  are semantic HTML tags.
               </div>
             </div>
           </div>
@@ -245,17 +254,15 @@
       </div>
         </div>
  </section>
-
+<!-- footer -->
  <footer class="p-3 mb-2 bg-black text-white">
   <div class="container text-start p-5">
     <div class="row">
       <div class="col ">
-       <img  class="img-fluid pb-5" src="images/logo.png" alt="">
-<p>There are many variations of <br>
-passages of Lorem Ipsum <br>
-available, but the majority have <br> 
-suffered alteration in some <br>
-form, by injected humour
+       <img  class="img-fluid pb-5" src="images/logo.png" style="width: 120px;">
+<p>The end of law is not to abolish or restrain, but to  preserve and enlarge freedom. <br>
+   For in all the states of <br>created beings capable of law,<br> where there is no law, there is no freedom. <br>
+
 </p>
       </div>
       <div class="col">
@@ -278,11 +285,15 @@ info@gmail.com</p>
          <p class="pb-2"> Subscribe for our latest & <br>
           Articles. We Won t Give You <br>
           Spam Mail</p>
+          <form class="d-flex" >
           <input class="" type="email" placeholder="        Email Address" aria-label="email">
+          <button class="btn btn-outline-light"><img src="images/f4.png" style="width: 20px; height: 20px;"></button>
+        </form>
       </div>
     </div>
   </div>
  </footer>
+ <!-- js script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
